// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bets-Summary Component should render correctly info when user is NOT prenium 1`] = `
"
<style>[object Object]</style>
<div class=\\"bets-summary\\">
    <h3 class=\\"bets-summary__title\\">Récapitulatif de vos paris</h3>
    <div class=\\"bets-summary__info\\">
        <p class=\\"bets-summary__info--bets-number\\">Nombre de paris joués: 2</p>
        <p class=\\"bets-summary__info--sum-odds\\">Côte(s) cummulée(s): 1.7</p>
        <p class=\\"bets-summary__info--potential-gain\\">Potentiel gain: 170</p>
    </div>
</div>
"
`;

exports[`Bets-Summary Component should render correctly info when user is prenium 1`] = `
"
<style>[object Object]</style>
<div class=\\"bets-summary\\">
    <h3 class=\\"bets-summary__title\\">Récapitulatif de vos paris</h3>
    <div class=\\"bets-summary__info\\">
        <p class=\\"bets-summary__info--bets-number\\">Nombre de paris joués: 2</p>
        <p class=\\"bets-summary__info--sum-odds\\">Côte(s) cummulée(s): 1.7</p>
        <p class=\\"bets-summary__info--potential-gain\\">Potentiel gain: 187</p>
    </div>
</div>
"
`;
